<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/tv_Question"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:gravity="center_vertical"
    app:layout_constraintBottom_toTopOf="@+id/relative_layout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="This is a sample question text" />

  <RelativeLayout
    android:id="@+id/relative_layout"
    android:layout_width="240dp"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    android:layout_marginBottom="-50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <Button
      android:id="@+id/button_true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_margin="2dp"
      android:text="@string/button_true"
      tools:text="True" />

    <Button
      android:id="@+id/button_false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_margin="2dp"
      android:layout_toEndOf="@id/button_true"
      android:text="@string/button_false"
      tools:text="False" />

    <Button
      android:id="@+id/button_previous"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="2dp"
      android:text="@string/button_previous"
      tools:text="Previous" />

    <Button
      android:id="@+id/button_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="2dp"
      android:layout_toEndOf="@id/button_previous"
      android:text="@string/button_next"
      tools:text="Next" />

  </RelativeLayout>

  <Button
    android:id="@+id/button_cheat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_cheat"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/relative_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>